--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,51 @@
     font-weight: 400;
     font-style: normal;
 }
+
+.projects{
+    overflow: hidden;
+    position: relative;
+
+    .icon {
+  background-color: #0086A1;
+  padding: 12px;
+  width: 50px;
+  border-radius: 10px;
+
+  position: absolute;
+  top: 74px;
+  left: 139px;
+
+  transform: scale(0);
+  transition: transform 0.3s ease;
+}
+.icons {
+background-color: #03172C;
+color: #EEEEEE;
+padding: 12px;
+width: 50px;
+border-radius: 10px;
+
+position: absolute;
+top: 74px;
+left: 199px;
+
+transform: scale(0);
+transition: transform 0.3s ease;
+}
+
+}
+
+.projects:hover{
+  border: 1px solid #0086A1;
+
+  .projectimg{
+    transform: scale(1.1);
+  }
+  .icon{
+    transform: scale(1.1);
+  }
+  .icons{
+    transform: scale(1.1);
+  }
+}
